# project

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
exportToHTML/: pyproject.toml.html
src/: README.md  cart.py  processing.py  widget.py
src/masks/: __init__.py  widget.py
src/processing/: functions.py
tests/: conftest.py  test_main.py  test_masks.py  test_processing.py  test_widget.py
utils/: add.py  exe.py  mail.py
