[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[dependency-groups]
dev = [
    "requests (>=2.33.1,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=2.0.0,<3.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
def = [
    "flake8 (>=7.3.0,<8.0.0)"
]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.0.0,<3.0.0)"
]


[tool.black]
line-length = 119
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true